<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#d6e6d9"
    android:gravity="center_vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instruction_1"
        android:id="@+id/txtBill"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editBill"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instruction_2"
        android:id="@+id/txtPercent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="10%"
            android:id="@+id/btn10"
            android:layout_gravity="center_horizontal"
            android:background="#c9c7b6"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="20%"
            android:id="@+id/btn20"
            android:background="#e092d0"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="25%"
            android:id="@+id/btn25"
            android:background="#8ed0ea"
            android:layout_margin="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="30%"
            android:id="@+id/btn30"
            android:background="#98d7a9"
            android:layout_margin="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/result_1"
            android:id="@+id/txtTip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="0.00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/result_2"
            android:id="@+id/txtTotal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/total"
            android:layout_gravity="center_horizontal"
            android:text="0.00"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message"
        android:id="@+id/message"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center" />

</LinearLayout>
